// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormSelect /> Validation states should render the correct snapshots 1`] = `
<select
  className="fd-form-select is-warning"
  placeholder="Field placeholder text"
/>
`;

exports[`<FormSelect /> Validation states should render the correct snapshots 2`] = `
<select
  className="fd-form-select is-error"
/>
`;

exports[`<FormSelect /> Validation states should render the correct snapshots 3`] = `
<select
  className="fd-form-select is-success"
/>
`;

exports[`<FormSelect /> Validation states should render the correct snapshots 4`] = `
<select
  className="fd-form-select is-information"
/>
`;

exports[`<FormSelect /> create form item 1`] = `
<select
  className="fd-form-select blue"
  disabled={true}
  id="select-1"
>
  <option
    value="1"
  >
    Duis malesuada odio volutpat elementum
  </option>
</select>
`;
